# aac_enc_dec

./: CMakeLists.txt  README.md  aac-enc.c  fdk_aac_enc.c  fdk_aac_enc.h  test_aac_enc.c
